========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2019-02-10

  - Fixed #374: Option --all treatment was broken in #210. Also catch and print
    errors.


2019-02-03

  - Fixed #372: Removed formatted string literal to keep compat with Python 3.5.


2019-01-29

  - Fixed #362: Predicate matching a parent account was matching accounts with
    word breaks but not at the boundary of an account name. This was causing
    a rare (but important) failure in how Pad balances were calculated.


2019-01-28

  - Released 2.2.1 for bug fixes.


2019-01-25

  - Improve output of tags and links for bean-report ledger and hledger.


2019-01-22

  - Fixed problem with invalid format strings with 0-width field when rendering
    MISSING.


2019-01-05

  - Merged pull request #85
    (https://bitbucket.org/blais/beancount/pull-requests/85) from hardikar,
    adding function grepn() to the shell.

  - Merged pull request #86
    (https://bitbucket.org/blais/beancount/pull-requests/86) from hardikar,
    adding function subst() to the shell.

  - Merged pull request #89
    (https://bitbucket.org/blais/beancount/pull-requests/89) from hardikar,
    adding functions date_diff(), date_add() to the shell.

  - Implemented best compression for zipfile in bean-bake as per Justus
    Pendleton's suggestion. For context, see this:
    https://groups.google.com/d/msgid/beancount/de75671d-532a-4deb-bd0f-fd9377e63753%40googlegroups.com?utm_medium=email&utm_source=footer


2018-12-18

  - Fixed #214: Add directory of current filename to sys.path with new option
    "insert_pythonpath". When this option is encountered in a file, we prepend
    the path of the file in which it is encountered at the front of the
    PYTHONPATH for the rest of the duration of the problem (we could consider
    resetting this after parsing and processing the plugins; not doing it now).
